# chrome-analytics-scripts

./: .clinerules  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAN.md  README.md  TODO.md  analytics_cli.py  db_schema.md  install-hooks.ps1  install-hooks.sh  pre-commit  pyproject.toml  requirements.txt  setup.py
.github/: release-please-config.json
.github/workflows/: auto-merge.yml  delete-branch.yml  release-please.yml
analytics_framework/: __init__.py  config.py  main.py
analytics_framework/api/: __init__.py  dify_client.py  nocodb_client.py
analytics_framework/models/: __init__.py  mongodb_schema.py
analytics_framework/processors/: __init__.py  data_processor.py
analytics_framework/storage/: __init__.py  mongodb_client.py  parquet_storage.py
analytics_framework/utils/: __init__.py  http_client.py  processing_state.py  thread_pool.py
docs/: http_client.md
examples/: http_client_example.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
sample_python_project/: __init__.py
scripts/: README_fetch_yesterday_messages.md  README_http_forwarder.md  README_sync_mongodb_to_url.md  create_mongodb_indexes_and_views.py  fetch_all_add_formatted_conversation.py  fetch_yesterday_messages.py  http_forwarder.py  store_chatbot_data.py  store_sample_data.py  sync_mongodb_to_nocodb.py  sync_mongodb_to_url.py  test_http_forwarder.py  test_torch_gpu.py
scripts/dify/: README.md  (+4 more)
tests/: test_http_client_performance.py  test_sample_python_project.py
tmp/: sample_raw_messages.json
(+33 files in other folders)
